<resources>
    <string name="app_name">Parliament Member App</string>
    <string name="welcome_text">Welcome to the Parliament Repository</string>
    <string name="search_btn">Search Member</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="constituency">Constituency</string>
    <string name="age">Age</string>
    <string name="party">Party</string>
    <string name="view_next_member">View next member</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upVote_bth">Upvote</string>
    <string name="downVote_btn">Downvote</string>
    <string name="view_party_list">View Party List</string>
    <string name="member_name">Member Name</string>
    <string name="member_title">Member\'s Title</string>
    <string name="member_image">Member Image</string>
    <string name="add_comment_btn">Add or View comment</string>
    <string name="submit_comment_btn">Save Comment</string>
    <string name="comment_content">Edit comment</string>
    <string name="search_hint">Type something to search</string>
    <string name="party_list">Party List</string>
    <string name="party_member_list">Party Member List</string>
    <string name="member_details">Member\'s Information </string>
    <string name="comment_fragment">Comments</string>
</resources>