<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">
    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.parliamentmemberapp.title.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_title" >
        <action
            android:id="@+id/action_titleFragment_to_partyListFragment"
            app:destination="@id/partyListFragment" />
        <action
            android:id="@+id/action_titleFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>
    <fragment
        android:id="@+id/memberFragment"
        android:name="com.example.parliamentmemberapp.memberDetails.MemberFragment"
        android:label="@string/member_details"
        >
        <argument
            android:name="selectedMember"
            app:argType="com.example.parliamentmemberapp.data.MemberOfParliament"
            />
        <action
            android:id="@+id/action_memberFragment_to_commentFragment"
            app:destination="@id/commentFragment" />
    </fragment>
    <fragment
        android:id="@+id/partyListFragment"
        android:name="com.example.parliamentmemberapp.partyList.PartyListFragment"
        android:label="@string/party_list"
        tools:layout="@layout/fragment_party_list" >
        <action
            android:id="@+id/action_partyListFragment_to_partyMemberFragment"
            app:destination="@id/partyMemberFragment" />
    </fragment>
    <fragment
        android:id="@+id/partyMemberFragment"
        android:name="com.example.parliamentmemberapp.partyMemberList.PartyMemberFragment"
        android:label="@string/party_member_list"
        tools:layout="@layout/fragment_party_member" >
        <argument
            android:name="party"
            app:argType="string"/>
        <action
            android:id="@+id/action_partyMemberFragment_to_memberFragment"
            app:destination="@id/memberFragment" />
    </fragment>
    <fragment
        android:id="@+id/commentFragment"
        android:name="com.example.parliamentmemberapp.memberDetails.CommentFragment"
        android:label="@string/comment_fragment"
        tools:layout="@layout/fragment_comment" >
        <action
            android:id="@+id/action_commentFragment_to_memberFragment"
            app:destination="@id/memberFragment" />
        <argument
            android:name="memberFeedback"
            app:argType="com.example.parliamentmemberapp.data.MemberFeedback" />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.parliamentmemberapp.searchMember.SearchFragment"
        android:label="@string/search_btn">
        <action
            android:id="@+id/action_searchFragment_to_memberFragment"
            app:destination="@id/memberFragment" />
    </fragment>
</navigation>